--- a/.github/workflows/pufferpanel.yml
+++ b/.github/workflows/pufferpanel.yml
@@ -33,19 +33,20 @@ jobs:
         if: ${{ always() }}
         run: |
           git fetch origin main
-          git checkout origin/main -- pufferpanel.tar.gz.part-*
+          git checkout origin/main -- pufferpanel.tar.gz.part-* || echo "No previous backup found"
 
-          # Join all parts into one tar.gz
-          cat pufferpanel.tar.gz.part-* > pufferpanel.tar.gz
-
-          # Remove old folder
-          rm -rf pufferpanel
-      
-          # Extract just like unzip
-          sudo tar -xzf pufferpanel.tar.gz
-
-          echo "Latest Puffer Panel data restored."
-          ls -l pufferpanel
+          if ls pufferpanel.tar.gz.part-* 1> /dev/null 2>&1; then
+            echo "Joining backup parts..."
+            cat pufferpanel.tar.gz.part-* > pufferpanel.tar.gz
+            rm -rf pufferpanel
+            mkdir -p pufferpanel
+            echo "Extracting backup..."
+            sudo tar -xzf pufferpanel.tar.gz -C .
+            echo "Latest Puffer Panel data restored."
+            ls -l pufferpanel
+          else
+            echo "No backup found, starting fresh."
+          fi
 
       - name: Start Playitgg Container
         run: |
@@ -88,7 +89,7 @@ jobs:
           --password kshosting@55 \
           --admin || echo "User may already exist"
 
-      # 11. Run LocalTunnel (300m)
+      # 11. Run LocalTunnel (keep alive)
       - name: Sleep 20000s
         run: |
           sleep 20000
@@ -97,14 +98,17 @@ jobs:
       - name: Commit Puffer Panel
         if: ${{ always() }}
         run: |
-          # Create archive
-          sudo tar -czf - pufferpanel | split -b 90M - pufferpanel.tar.gz.part-
+          TIMESTAMP=$(date +"%Y-%m-%d_%H-%M-%S")
+          BACKUP_NAME="pufferpanel_${TIMESTAMP}.tar.gz"
+
+          echo "Creating backup: $BACKUP_NAME"
+          sudo tar -czf - pufferpanel | split -b 90M - ${BACKUP_NAME}.part-
 
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-          git add pufferpanel.tar.gz.part-*
-          git commit -m "Update Puffer Panel backup (split archive)"
+          git add ${BACKUP_NAME}.part-*
+          git commit -m "Backup PufferPanel data ($TIMESTAMP)"
           git push origin main || echo "Nothing to commit"
 
       # --- Auto-restart workflow ---
