--- a/.github/workflows/pufferpanel.yml
+++ b/.github/workflows/pufferpanel.yml
@@ -21,6 +21,11 @@ jobs:
         with:
           fetch-depth: 0   # allow commits back
 
+      - name: Setup Node.js 22
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+        
       # 4. Install Docker Compose
       - name: Install Docker Compose
         run: |
