--- a/.github/workflows/pufferpanel.yml
+++ b/.github/workflows/pufferpanel.yml
@@ -20,7 +20,15 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0   # allow commits back
-    
+
+      - name: Install Node JS Latest
+        run: |
+          curl -fsSL https://deb.nodesource.com/setup_current.x | bash -
+          apt install -y nodejs
+          npm install -g npm@latest
+          node -v
+          npm -v
+          
       # 4. Install Docker Compose
       - name: Install Docker Compose
         run: |
