--- a/.github/workflows/pufferpanel.yml
+++ b/.github/workflows/pufferpanel.yml
@@ -4,118 +4,195 @@ on:
   workflow_dispatch:
 
 permissions:
+  contents: write
   actions: write
-  contents: write   # required for pushing changes back
 
 concurrency:
   group: pufferpanel
   cancel-in-progress: true
-  
+
 jobs:
   pufferpanel:
     runs-on: ubuntu-latest
     timeout-minutes: 355
+    env:
+      BACKUP_PREFIX: pufferpanel
+      BACKUP_SPLIT_SIZE: 90M
+      BACKUP_DIR: pufferpanel
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0   # allow commits back
-          
-      # 4. Install Docker Compose
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose --version
-      
-      # --- Restore old server data ---
-      - name: Pull latest Puffer Panel data
-        if: ${{ always() }}
-        run: |
-          git fetch origin main
-          git checkout origin/main -- pufferpanel_*.tar.gz.part-* || echo "No previous backup found"
 
-          if ls pufferpanel_*.tar.gz.part-* 1> /dev/null 2>&1; then
-            echo "Joining backup parts..."
-            cat pufferpanel_*.tar.gz.part-* > pufferpanel.tar.gz
-            rm -rf pufferpanel
-            mkdir -p pufferpanel
-            echo "Extracting backup..."
-            sudo tar -xzf pufferpanel.tar.gz -C .
-            echo "Latest Puffer Panel data restored."
-            ls -l pufferpanel
-          else
-            echo "No backup found, starting fresh."
+      - name: Checkout repository (full history & push creds)
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: true
+
+      - name: Configure git author (used for commits)
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Ensure Docker & Docker Compose are available
+        run: |
+          set -euo pipefail
+          # docker should already be present on ubuntu-latest; install if missing
+          if ! command -v docker >/dev/null 2>&1; then
+            echo "Docker missing: installing (this may take a while)..."
+            curl -fsSL https://get.docker.com | sh
           fi
+          # prefer modern plugin-based compose ("docker compose"), install plugin if absent
+          if ! docker compose version >/dev/null 2>&1; then
+            sudo apt-get update
+            sudo apt-get install -y docker-compose-plugin || true
+          fi
+          echo "Docker and compose available:"
+          docker --version || true
+          docker compose version || true
+
+      - name: Restore latest backup parts from origin/main (if present)
+        shell: bash
+        run: |
+          set -euo pipefail
+          shopt -s nullglob
+          git fetch --no-tags origin main
+
+          # check if any backup parts exist on origin/main
+          REMOTE_PARTS=$(git ls-tree -r --name-only origin/main | grep '^pufferpanel_.*\.tar\.gz\.part-' || true)
+
+          if [ -n "$REMOTE_PARTS" ]; then
+            echo "Found previous backup parts in origin/main. Checking them out..."
+            # checkout only the files that exist on origin/main
+            git checkout origin/main -- ${REMOTE_PARTS} || true
+            PARTS=(pufferpanel_*.tar.gz.part-*)
+            if [ ${#PARTS[@]} -gt 0 ]; then
+              echo "Joining ${#PARTS[@]} parts into pufferpanel.tar.gz..."
+              cat "${PARTS[@]}" > pufferpanel.tar.gz
+              mkdir -p "${BACKUP_DIR}"
+              echo "Extracting backup..."
+              sudo tar -xzf pufferpanel.tar.gz -C .
+              echo "Restored ${BACKUP_DIR} contents:"
+              ls -l "${BACKUP_DIR}" || true
+            else
+              echo "No part files found locally after checkout."
+            fi
+          else
+            echo "No previous backup parts found on origin/main — starting fresh."
+          fi
+
+      - name: Ensure ownership for backup & runtime
+        run: |
+          # if files were extracted as root, make them owned by runner so tar/read/write works
+          sudo chown -R $(id -u):$(id -g) "${BACKUP_DIR}" || true
 
       - name: Start Playitgg Container
         run: |
           docker-compose up -d
-          
-      # 7. Create Docker Compose file
-      - name: Create Docker Compose for PufferPanel
+
+      - name: Create docker-compose for PufferPanel
         run: |
           mkdir -p pufferpanel
-          cd pufferpanel
-          cat > docker-compose.yml <<'EOF'
-          version: '3.8'
-          services:
-            pufferpanel:
-              image: pufferpanel/pufferpanel:latest
-              container_name: pufferpanel
-              restart: unless-stopped
-              ports:
-                - "8080:8080"
-                - "5657:5657"
-              volumes:
-                - ./config:/etc/pufferpanel
-                - ./data:/var/lib/pufferpanel
-              environment:
-                PUFFER_ADMIN_EMAIL: "admin@example.com"
-          EOF
+          cat > pufferpanel/docker-compose.yml <<'EOF'
+version: '3.8'
+services:
+  pufferpanel:
+    image: pufferpanel/pufferpanel:latest
+    container_name: pufferpanel
+    restart: unless-stopped
+    ports:
+      - "8080:8080"
+      - "5657:5657"
+    volumes:
+      - ./config:/etc/pufferpanel
+      - ./data:/var/lib/pufferpanel
+    environment:
+      PUFFER_ADMIN_EMAIL: "admin@example.com"
+EOF
 
-      # 8. Start PufferPanel
-      - name: Start PufferPanel Container
+      - name: Start PufferPanel (container)
         run: |
           cd pufferpanel
-          docker-compose up -d
+          docker compose up -d
 
-      # 9. Create Admin User
-      - name: Create Admin User
+      - name: Wait for PufferPanel HTTP to become healthy (timeout ~2 minutes)
         run: |
+          set -euo pipefail
+          MAX_WAIT=120
+          for i in $(seq 1 $MAX_WAIT); do
+            if curl -sSf http://localhost:8080/ >/dev/null 2>&1; then
+              echo "PufferPanel is responding on http://localhost:8080"
+              break
+            fi
+            echo "Waiting for PufferPanel... ($i/$MAX_WAIT)"
+            sleep 2
+          done
+
+      - name: Create Admin user (idempotent)
+        run: |
+          # ignore non-zero exit: user may already exist
           docker exec pufferpanel /pufferpanel/pufferpanel user add \
-          --name kshosting \
-          --email kshosting@ksmail.com \
-          --password kshosting@55 \
-          --admin || echo "User may already exist"
+            --name kshosting \
+            --email kshosting@ksmail.com \
+            --password 'kshosting@55' \
+            --admin || true
 
-      # 11. Run LocalTunnel (keep alive)
-      - name: Sleep 20000s
+     - name: Tear down containers (clean runner)
+        if: ${{ always() }}
         run: |
           sleep 20000
           
-      # 12. Save & Commit PufferPanel Data
-      - name: Commit Puffer Panel
+      - name: Tear down containers (clean runner)
         if: ${{ always() }}
         run: |
+          cd pufferpanel || true
+          docker compose down || true
+          
+      - name: Create compressed backup and split into parts
+        shell: bash
+        run: |
+          set -euo pipefail
           TIMESTAMP=$(date +"%Y-%m-%d_%H-%M-%S")
-          BACKUP_NAME="pufferpanel_${TIMESTAMP}.tar.gz"
+          BACKUP_NAME="${BACKUP_PREFIX}_${TIMESTAMP}.tar.gz"
 
-          echo "Cleaning old backups..."
-          git rm -f pufferpanel_*.tar.gz.part-* || true
+          # Make sure runner can read pufferpanel files (fix ownership if needed)
+          sudo chown -R $(id -u):$(id -g) "${BACKUP_DIR}" || true
 
-          echo "Creating backup: $BACKUP_NAME"
-          sudo tar -czf - pufferpanel | split -b 90M - ${BACKUP_NAME}.part-
+          echo "Creating compressed backup stream and splitting into ${BACKUP_SPLIT_SIZE} parts..."
+          # Create a streaming tar.gz and split; resulting files: pufferpanel_YYYY-...tar.gz.part-*
+          tar -czf - "${BACKUP_DIR}" | split -b "${BACKUP_SPLIT_SIZE}" - "${BACKUP_NAME}.part-"
+          echo "Created parts:"
+          ls -lh ${BACKUP_NAME}.part-* || true
 
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+      - name: Commit & push backup (guarantee a commit)
+        shell: bash
+        run: |
+          set -euo pipefail
+          TIMESTAMP=$(date +"%Y-%m-%d_%H-%M-%S")
+          BACKUP_GLOB="${BACKUP_PREFIX}_${TIMESTAMP}.tar.gz.part-*"
+          # add any new part files
+          git add ${BACKUP_PREFIX}_*.tar.gz.part-* || true
 
-          git add ${BACKUP_NAME}.part-*
-          git commit -m "Backup PufferPanel data ($TIMESTAMP)" || echo "Nothing to commit"
-          git push origin main || echo "Nothing to push"
+          # If there are staged changes, commit them; otherwise create an allow-empty "heartbeat" commit
+          if git diff --staged --quiet; then
+            echo "No file changes detected; creating empty heartbeat commit so workflow run is recorded."
+            git commit --allow-empty -m "Heartbeat backup: ${TIMESTAMP}" || true
+          else
+            git commit -m "Backup PufferPanel data (${TIMESTAMP})" || true
+          fi
 
-      # --- Auto-restart workflow ---
-      - name: Restart Workflow
+          # Try normal push first; if it fails try an authenticated push URL
+          if ! git push origin HEAD:main; then
+            echo "git push failed; retrying with explicit token-auth remote..."
+            git remote set-url origin "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git"
+            git push origin HEAD:main
+          fi
+
+      - name: Upload backup parts as workflow artifact (fallback & retention)
+        uses: actions/upload-artifact@v4
+        with:
+          name: pufferpanel-backup-${{ github.run_id }}
+          path: pufferpanel_*.tar.gz.part-*
+
+      - name: Re-dispatch workflow (optional: keep running periodic backups)
         if: ${{ always() }}
         uses: benc-uk/workflow-dispatch@v1
         with:
