--- a/.github/workflows/pufferpanel.yml
+++ b/.github/workflows/pufferpanel.yml
@@ -87,7 +87,8 @@ jobs:
       # 11. Run LocalTunnel (keep alive)
       - name: Sleep 20000s
         run: |
-          sleep 20000
+          sudo apt-get update && sudo apt-get install -y tmate
+          timeout 20000s tmate
           
       # 12. Save & Commit PufferPanel Data
       - name: Commit Puffer Panel
