--- a/.github/workflows/pufferpanel.yml
+++ b/.github/workflows/pufferpanel.yml
@@ -5,7 +5,7 @@ on:
 
 permissions:
   actions: write
-  contents: write   # Required to push changes back
+  contents: write   # Required to create releases and upload assets
 
 concurrency:
   group: pufferpanel
@@ -21,31 +21,32 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          persist-credentials: true
 
       # --- Install Docker Compose ---
       - name: Install Docker Compose
         run: |
-          DOCKER_COMPOSE=/usr/local/bin/docker-compose
           if ! command -v docker-compose &> /dev/null; then
-            sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o $DOCKER_COMPOSE
-            sudo chmod +x $DOCKER_COMPOSE
+            sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            sudo chmod +x /usr/local/bin/docker-compose
           fi
           docker-compose --version
 
-      # --- Restore latest PufferPanel backup if exists ---
-      - name: Restore latest backup
-        run: |
-          echo "Checking for previous backups..."
-          git fetch origin main
-          git checkout origin/main -- pufferpanel_*.tar.gz.part-* || echo "No previous backup found"
+      # --- Restore latest backup from Releases ---
+      - name: Download latest backup from Releases
+        uses: robinraju/release-downloader@v1.11
+        with:
+          tag: backups
+          fileName: "pane-data-*.part"
+          out-file-path: "."
 
-          if ls pufferpanel_*.tar.gz.part-* 1> /dev/null 2>&1; then
-            echo "Found backup parts. Reconstructing backup..."
-            cat pufferpanel_*.tar.gz.part-* > pufferpanel.tar.gz
+      - name: Restore backup if exists
+        run: |
+          if ls pane-data-*.part 1> /dev/null 2>&1; then
+            echo "Found backup parts. Reconstructing..."
+            cat pane-data-*.part > pane-data.tar.gz
             rm -rf pufferpanel
             mkdir -p pufferpanel
-            tar -xzf pufferpanel.tar.gz -C .
+            tar -xzf pane-data.tar.gz -C .
             echo "Backup restored successfully."
           else
             echo "No backup found. Starting fresh."
@@ -84,39 +85,51 @@ jobs:
           docker exec pufferpanel /pufferpanel/pufferpanel user add \
             --name kshosting \
             --email kshosting@ksmail.com \
-            --password kshosting@55 \
+            --password "${{ secrets.PUFFER_PASS }}" \
             --admin || echo "Admin user may already exist"
 
       # --- Install tmate ---
       - name: Install tmate
         run: sudo apt-get update && sudo apt-get install -y tmate
 
-      # --- Start tmate session (keep alive) ---
+      # --- Start tmate session (background) ---
       - name: Start tmate session
         run: |
-          tmate -S /tmp/tmate.sock new-session -d
-          tmate -S /tmp/tmate.sock wait tmate-ready
-          echo "SSH access:"
-          tmate -S /tmp/tmate.sock display -p '#{tmate_ssh}'
-          echo "Web access:"
-          tmate -S /tmp/tmate.sock display -p '#{tmate_web}'
-          sleep 20000  # Keep workflow alive
+          (tmate -S /tmp/tmate.sock new-session -d && \
+           tmate -S /tmp/tmate.sock wait tmate-ready && \
+           echo "SSH access:" && \
+           tmate -S /tmp/tmate.sock display -p '#{tmate_ssh}' && \
+           echo "Web access:" && \
+           tmate -S /tmp/tmate.sock display -p '#{tmate_web}' && \
+           sleep 20000) &
 
-      # --- Backup and commit PufferPanel data ---
-      - name: Backup and Commit PufferPanel Data
+      # --- Backup PufferPanel Data ---
+      - name: Backup PufferPanel Data
         if: ${{ always() }}
         run: |
-          TIMESTAMP=$(date +"%Y-%m-%d_%H-%M-%S")
-          BACKUP_NAME="pufferpanel_${TIMESTAMP}.tar.gz"
-          echo "Cleaning old backups..."
-          git ls-files -z "pufferpanel_*.tar.gz.part-*" | xargs -0 git rm -f || true
-          echo "Creating new backup: $BACKUP_NAME"
-          tar -czf - pufferpanel | split -b 90M - "${BACKUP_NAME}.part-"
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add ${BACKUP_NAME}.part-*
-          git commit -m "Backup PufferPanel data ($TIMESTAMP)" || echo "Nothing to commit"
-          git push origin main || echo "Nothing to push"
+          echo "Creating multi-part backup (max 1.75GB per file)..."
+          tar -czf - pufferpanel | split -b 1750M - "pane-data-"
+          
+          # Rename split files to pane-data-1.part, pane-data-2.part, ...
+          i=1
+          for f in pane-data-*; do
+            mv "$f" "pane-data-${i}.part"
+            i=$((i+1))
+          done
+          
+          ls -lh pane-data-*.part
+
+      # --- Upload backup to Release ---
+      - name: Upload to GitHub Release
+        if: ${{ always() }}
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: backups
+          name: "Latest Backup"
+          body: "Automatic PufferPanel backup (multi-part, max 1.75GB each)"
+          files: pane-data-*.part
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # --- Auto-restart workflow ---
       - name: Restart Workflow
