--- a/.github/workflows/pufferpanel.yml
+++ b/.github/workflows/pufferpanel.yml
@@ -81,7 +81,7 @@ jobs:
           --name kshosting \
           --email kshosting@ksmail.com \
           --password kshosting@55 \
-          --admin || echo "User may already exist"
+          --admin || echo "Admin already exists"
 
       # --- Install tmate ---
       - name: Install tmate
